manifest/objects/DMMAX__Opinion__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Acknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acknowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Acknowledged__c</fullName>
        <label>Acknowledged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Chatted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Chatted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Downvote__c</fullName>
        <label>Downvote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__EarliestView__c</fullName>
        <description>When was the insight, for this object, seen</description>
        <label>Earliest View</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMMAX__EmailClickThroughCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Email Click Through Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Emailed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Emailed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Hidden__c</fullName>
        <label>Hidden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Insight__c</fullName>
        <label>Insight</label>
        <referenceTo>DMMAX__Insight__c</referenceTo>
        <relationshipName>Opinions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMMAX__IsPaused__c</fullName>
        <formula>DMMAX__PausedUntil__c &gt; today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsPaused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Max Opinions</relationshipLabel>
        <relationshipName>Max_Opinions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__PanelFired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the user goes to the opportunity and the insight fire then this field should be set to true.</description>
        <label>Panel Fired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__PausedFor__c</fullName>
        <label>Paused For</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__PausedOn__c</fullName>
        <label>Paused On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMMAX__PausedUntil__c</fullName>
        <label>Paused Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMMAX__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the user been shown this insight on a panel</description>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Record__c</fullName>
        <label>Record</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Uniqueness</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Upvote__c</fullName>
        <label>Upvote</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opinions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__Viewed_Age__c</fullName>
        <formula>TODAY() -  DATEVALUE(DMMAX__EarliestView__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewed Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Viewed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Max Opinion</label>
    <nameField>
        <label>Opinion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Opinions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>